[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/Structures/viking_longhouse.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Structures/Barracks.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/UI/health_bar_background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/UI/health_bar_progress.png" type="Texture" id=4]
[ext_resource path="res://Assets/Materials/Outline.tres" type="Material" id=5]
[ext_resource path="res://Assets/Materials/GUIPanel.tres" type="StyleBox" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 342.5, 136.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 256, 166 )

[node name="Barracks" type="Area2D" groups=["Building", "friendlyBuilding"]]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 1, 1.52588e-05 )
scale = Vector2( 0.568027, 0.568027 )
texture = ExtResource( 1 )
region_rect = Rect2( -71.144, -58.0491, 1042.66, 700.277 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10.5, -3.5 )
shape = SubResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -149.0
margin_top = -275.0
margin_right = 347.0
margin_bottom = -115.0
rect_scale = Vector2( 0.6, 0.6 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 152, 0 )

[node name="HealthBarTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MouseOver" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseOver"]
visible = false
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NoRoomMessage" type="TextEdit" parent="CanvasLayer"]
visible = false
margin_left = 384.0
margin_top = 241.0
margin_right = 533.0
margin_bottom = 284.0
rect_scale = Vector2( 2, 2 )
text = "Unit inside barracks !
Move them out first."

[node name="Panel" type="Panel" parent="."]
margin_left = -91.0
margin_top = 148.0
margin_right = 90.0
margin_bottom = 262.0
custom_styles/panel = ExtResource( 6 )

[node name="PurchaseSpear" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -44.0
margin_right = 76.5
margin_bottom = -24.0
text = "Spearman"

[node name="PurchaseAxe" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = -22.0
margin_right = 76.5
margin_bottom = -2.0
text = "Axeman"

[node name="PurchaseBow" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_right = 76.5
margin_bottom = 20.0
text = "Archer"

[node name="PurchaseThrall" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = 22.0
margin_right = 76.5
margin_bottom = 42.0
text = "Thrall (Gatherer)"

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="MouseOver" to="." method="_on_MouseOver_mouse_entered"]
[connection signal="mouse_exited" from="MouseOver" to="." method="_on_MouseOver_mouse_exited"]
[connection signal="pressed" from="Panel/PurchaseSpear" to="." method="_on_PurchaseSpear_pressed"]
[connection signal="pressed" from="Panel/PurchaseAxe" to="." method="_on_PurchaseAxe_pressed"]
[connection signal="pressed" from="Panel/PurchaseBow" to="." method="_on_PurchaseBow_pressed"]
[connection signal="pressed" from="Panel/PurchaseThrall" to="." method="_on_PurchaseThrall_pressed"]
